--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.12.1"
   }
 }
