--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2": "^1.5.0",
     "pg": "^7.12.1"
+  },
+  "devDependencies": {
+    "prettier-eslint": "^9.0.0"
   }
 }
