--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
